# syndicate-appchains

./: .dockerignore  .env.example  .envrc.example  .gitignore  .gitmodules  .golangci.yaml  .pre-commit-config.yaml  .rustfmt.toml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.metabased-sequencer  Dockerfile.metabased-translator  Dockerfile.op-translator  LICENSE  Makefile  Makefile.toml  README.md  build_all_docker_targets.sh  docker-compose.maestro.yaml  go.mod  go.sum  justfile  launch-devcontainer.sh  main.go  redis.conf  rust-toolchain.toml  rustc-ice-2025-02-19T18_03_07-40776.txt  rustc-ice-2025-02-19T18_03_07-40777.txt  rustc-ice-2025-02-20T21_34_04-66216.txt  rustc-ice-2025-02-20T21_34_04-66217.txt  taplo.toml  template.env  testnet.env
based-sequencer-chain-reader-exex/: .gitignore  Cargo.toml
based-sequencer-chain-reader-exex/src/: read-transactions.rs
batch-sequencer/: Cargo.toml  README.md
batch-sequencer/crates/tc-client/: Cargo.toml
batch-sequencer/src/: config.rs  main.rs
bench-utils/: Cargo.toml
bench-utils/src/: data_generators.rs  fixtures.rs  lib.rs
benches/: Cargo.toml  README.md
benches/benches/: compression_benches.rs  crypto_benches.rs  lib.rs  main.rs  serialization_benches.rs
chain-ingestor/: Cargo.toml
chain-ingestor/src/: client.rs  db.rs  eth_client.rs  ingestor.rs  lib.rs  main.rs  metrics.rs  server.rs
exex/: Cargo.toml
exex/src/: read-transactions.rs
maestro/: Cargo.toml  README.md
maestro/crates/batcher/: Cargo.toml
maestro/src/: config.rs  constants.rs  errors.rs  layers.rs  lib.rs  maestro.rs  maestro_service.rs  main.rs  redis_manager.rs  server.rs
maestro/src/redis/: consumer.rs  keys.rs  mod.rs  producer.rs  string.rs  test_utils.rs  ttl.rs
maestro/tests/: integration_test.rs  redis_perf.rs
mchain/: Cargo.toml  README.md
mchain/src/: client.rs  db.rs  lib.rs  main.rs  mchain.rs  metrics.rs  server.rs
mchain/tests/: signal_tests.rs
metabased-contracts/reth-and-exexs/: Cargo.toml  README.md
metabased-contracts/reth-and-exexs/src/: exex.rs
metabased-poster/: Cargo.toml  README.md
metabased-poster/src/: config.rs  lib.rs  main.rs  metrics.rs  poller.rs  poster.rs  shutdown_channels.rs  spawn.rs  submitter.rs  types.rs
metabased-poster/tests/: integration_tests.rs
metabased-poster/tests/common/: mod.rs
metabased-poster/tests/utils/: mod.rs
metabased-sequencer/: .dockerignore  .envrc.local.example  Cargo.toml  Dockerfile  README.md  template.env
metabased-sequencer/interceptor/: Cargo.toml
metabased-sequencer/interceptor/benches/: zlib_compression.rs
metabased-sequencer/interceptor/src/: main.rs
metabased-sequencer/metabased-sequencer/: Cargo.toml
metabased-sequencer/metabased-sequencer/benches/: zlib_compression.rs
metabased-sequencer/metabased-sequencer/src/: contract.rs  main.rs  service.rs
metabased-sequencer/metabased-sequencer_old/: Cargo.toml
metabased-sequencer/metabased-sequencer_old/src/: main.rs
metabased-sequencer/proxy/: Cargo.toml
metabased-sequencer/proxy/src/: main.rs
metabased-sequencer/src/: config.rs  contract.rs  errors.rs  lib.rs  main.rs  metrics.rs  nonce.rs  relayer.rs  server.rs  service.rs  validation.rs  zlib_compression.rs
metabased-sequencer/src/utils/: mod.rs  validation.rs
metabased-translator/: Cargo.toml  Makefile  README.md
metabased-translator/block-builder/: Cargo.toml
metabased-translator/block-builder/contracts/: lib
metabased-translator/block-builder/src/: lib.rs  main.rs
metabased-translator/contract-bindings/: Cargo.toml
metabased-translator/contract-bindings/src/: lib.rs
metabased-translator/contracts/: foundry.toml  remappings.txt
metabased-translator/contracts/bridge/: IRollupUserLogic.sol
metabased-translator/docker-compose/: README.md  chain_info.json  devnet.yaml  docker-compose.yaml  genesis.json  manchego.yaml  oom.yaml
metabased-translator/metrics/: Cargo.toml  README.md
metabased-translator/src/: lib.rs  main.rs
metabased-translator/tests/: Cargo.toml  README.md  e2e_env.rs  integration_tests.rs
reth-and-exexs/: Cargo.toml  Makefile  README.md
reth-and-exexs/src/: exex.rs  main.rs  read_from_based_sequencer_chain_contract.rs
shared/: Cargo.toml  Makefile  README.md
shared/arb-contracts/: remappings.txt
shared/compression/: compression.md
shared/contract-bindings/: Cargo.toml  generate-bindings.sh
shared/src/: additive_compression.rs  append_only_db.rs  batch_compression.rs  bounded_join_set.rs  eth_client.rs  fixed_size_append_only_db.rs  health.rs  json_rpc.rs  lib.rs  logger.rs  metrics.rs  multi_rpc_provider.rs  parse.rs  retry.rs  service_start_utils.rs  single_value_db.rs  test_utils.rs  tracing.rs  tx_validation.rs  types.rs  zlib_compression.rs
shared/test-utils/: Cargo.toml
synd-batch-sequencer/: Cargo.toml  README.md
synd-batch-sequencer/src/: batcher.rs  config.rs  lib.rs  main.rs  metrics.rs  sequencing_batch.rs
synd-mchain/: Cargo.toml  README.md
synd-mchain/src/: client.rs  db.rs  lib.rs  main.rs  metrics.rs  server.rs
synd-mchain/tests/: signal_tests.rs
synd-proposer/: Cargo.toml  README.md
synd-proposer/src/: config.rs  lib.rs  main.rs  proposer.rs  types.rs
synd-proposer/tests/: integration_tests.rs
synd-stake-cli/: Cargo.toml
synd-stake-cli/src/: gas_agg.rs  lib.rs  main.rs  mint.rs  proofs.rs  refund_gas.rs
synd-translator/tests/: Cargo.toml  README.md
synd-verifier/: Cargo.toml  README.md
synd-verifier/src/: config.rs  errors.rs  lib.rs  main.rs  types.rs  verifier.rs
synd-withdrawals/synd-appchain-verifier/: Cargo.toml  README.md
synd-withdrawals/synd-proposer/: .gitignore  Cargo.toml  README.md  go.mod  go.sum
tc-sequencer/: Cargo.toml  README.md
tc-sequencer/src/: bytecode.rs  config.rs  errors.rs  lib.rs  main.rs  server.rs  tc_client.rs  validation.rs
test-framework/: Cargo.toml
test-framework/config/: anvil_213.json  anvil_300.json
test-framework/src/: anvil_utils.rs  components.rs  docker_utils.rs  lib.rs  preloaded_config.rs
test-framework/tests/: e2e_tests.rs  e2e_tests_maestro.rs  e2e_tests_withdrawals.rs  main.rs
(+2690 files in other folders)
