[package]
edition.workspace = true
name              = "batch-sequencer"
version.workspace = true

[dependencies]
batcher = { workspace = true }
eyre    = { workspace = true }
shared  = { workspace = true }
tokio   = { workspace = true, features = ["signal"] }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
alloy   = { workspace = true }
mockito = { workspace = true }
url     = { workspace = true }
