[package]
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "benchmarks"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[[bench]]
harness = false
name    = "compression_benches"

[[bench]]
harness = false
name    = "crypto_benches"


[[bench]]
harness = false
name    = "serialization_benches"

[dependencies]
alloy                = { workspace = true, features = ["providers", "sol-types"] }
bench-utils          = { path = "../bench-utils" }
bincode              = { workspace = true }
rand                 = { workspace = true }
shared               = { workspace = true }
synd-batch-sequencer = { workspace = true }
synd-mchain          = { workspace = true }

[lints.clippy]
expect_used = "allow"

[lints.rust]
dead_code    = "allow"
missing_docs = "allow"
