[package]
edition.workspace      = true
exclude.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "chain-ingestor"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
alloy             = { workspace = true, features = ["provider-ws"] }
bincode           = { workspace = true }
clap              = { workspace = true, features = ["derive", "env"] }
contract-bindings = { workspace = true }
eyre              = { workspace = true }
jsonrpsee         = { workspace = true, features = ["ws-client", "server"] }
prometheus-client = { workspace = true }
rocksdb           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
shared            = { workspace = true }
tokio             = { workspace = true, features = ["signal"] }
tracing           = { workspace = true }
url               = { workspace = true }
futures-util = { workspace = true }
humantime = {workspace = true}
fs2 = "0.4.3"

[dev-dependencies]
ctor       = { workspace = true }
test-utils = { workspace = true }

[lints]
workspace = true
