[package]
edition.workspace      = true
exclude.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "chain-ingestor"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
alloy             = { workspace = true, features = ["provider-ws"] }
clap              = { workspace = true, features = ["derive", "env"] }
eyre              = { workspace = true }
fs2               = "0.4.3"
futures-util      = { workspace = true }
humantime         = { workspace = true }
jsonrpsee         = { workspace = true, features = ["server", "ws-client"] }
prometheus-client = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
shared            = { workspace = true }
tokio             = { workspace = true, features = ["signal"] }
tracing           = { workspace = true }

[dev-dependencies]
ctor       = { workspace = true }
test-utils = { workspace = true }

[lints]
workspace = true
