[package]
edition.workspace      = true
exclude.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "maestro"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
alloy = { workspace = true, features = [
  "contract",
  "k256",
  "node-bindings",
  "provider-engine-api",
  "providers",
  "rlp",
  "rpc-types",
  "signer-local",
  "signers",
] }

axum               = { workspace = true }
bytes              = { workspace = true }
clap               = { workspace = true, features = ["derive", "env"] }
eyre               = { workspace = true }
futures-util       = { workspace = true }
http               = { workspace = true }
http-body          = { workspace = true }
jsonrpsee          = { workspace = true, features = ["full"] }
mockall            = { workspace = true }
rand               = "0.8.5"
redis              = { workspace = true, features = ["streams", "tokio-comp"] }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
shared             = { workspace = true }
test-utils         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tower              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[lints]
workspace = true
