[package]
name = "mchain"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
eyre = { workspace = true }
rocksdb = { workspace = true }
alloy = { workspace = true, features = ["provider-engine-api"] }
jsonrpsee = {workspace = true, features = ["server"]}
serde = { workspace = true }
bincode = { workspace = true }
block-builder = {workspace = true}
contract-bindings = {workspace = true}
tokio = { workspace = true, features = [ "signal" ] }

[lints]
workspace = true