[package]
edition.workspace      = true
exclude.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "mchain"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
alloy             = { workspace = true, features = ["json-rpc", "provider-engine-api"] }
bincode           = { workspace = true }
clap              = { workspace = true, features = ["derive", "env"] }
contract-bindings = { workspace = true }
eyre              = { workspace = true }
jsonrpsee         = { workspace = true, features = ["server"] }
prometheus-client = { workspace = true }
rocksdb           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
shared            = { workspace = true }
tokio             = { workspace = true, features = ["signal"] }
tower             = { workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }

[dev-dependencies]
ctor       = { workspace = true }
test-utils = { workspace = true }

[lints]
workspace = true
