[package]
name = "metabased-poster"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
eyre = { workspace = true }
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }


[lints]
workspace = true
