[package]
edition.workspace = true
name              = "metabased-poster"
version.workspace = true

[dependencies]
alloy              = { workspace = true, features = ["provider-engine-api", "providers"] }
clap               = { workspace = true, features = ["derive", "env"] }
eyre               = { workspace = true }
humantime          = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["full", "sync"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url                = { workspace = true }


[lints]
workspace = true
