[package]
edition.workspace = true
name              = "metabased-poster"
version.workspace = true

[dependencies]
alloy              = { workspace = true, features = ["provider-engine-api", "providers"] }
axum               = { workspace = true }
clap               = { workspace = true, features = ["derive", "env"] }
contract-bindings  = { workspace = true }
eyre               = { workspace = true }
humantime          = { workspace = true }
prometheus-client  = { workspace = true }
serde              = { workspace = true }
shared             = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["full", "sync"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url                = { workspace = true }

[lints]
workspace = true

[features]
env-tests = []

[dev-dependencies]
alloy = { workspace = true, features = [
  "node-bindings",
  "rpc-types-anvil",
  "sol-types",
] }
jsonrpsee = { workspace = true, features = ["server"] }
