[package]
name = "metabased-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true, features = [
  "rlp",
  "provider-engine-api",
  "providers",
  "rpc-types",
  "contract",
  "signers",
  "signer-local",
  "k256",
  "node-bindings"
] }
reqwest = { workspace = true }
axum              = { workspace = true }
prometheus-client = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
eyre = {workspace = true}
hex = {workspace = true}
jsonrpsee = { workspace = true, features = ["server", "http-client"] }
serde_json = {workspace = true}
tokio = { workspace = true, features = ["full"] }
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = {workspace = true}
thiserror = {workspace = true}
tower = {workspace = true}
bytes = {workspace = true}
flate2 = {workspace = true}
humantime = { workspace = true }
futures = "0.3.31"
dashmap = "6.1.0"

[lints]
workspace = true