[package]
edition.workspace = true
name              = "metabased-sequencer"
version.workspace = true

[dependencies]
alloy = { workspace = true, features = [
  "contract",
  "k256",
  "node-bindings",
  "provider-engine-api",
  "providers",
  "rlp",
  "rpc-types",
  "signer-local",
  "signers",
] }

axum               = { workspace = true }
bytes              = { workspace = true }
clap               = { workspace = true, features = ["derive", "env"] }
eyre               = { workspace = true }
flate2             = { workspace = true }
hex                = { workspace = true }
humantime          = { workspace = true }
jsonrpsee          = { workspace = true, features = ["http-client", "server"] }
prometheus-client  = { workspace = true }
reqwest            = { workspace = true }
serde_json         = { workspace = true }
shared             = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tower              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url                = { workspace = true }

[lints]
workspace = true
