[package]
edition.workspace = true
name              = "metabased-sequencer"
version.workspace = true

[dependencies]
alloy = { workspace = true, features = [
  "contract",
  "k256",
  "node-bindings",
  "provider-engine-api",
  "providers",
  "rlp",
  "rpc-types",
  "signer-local",
  "signers",
] }

clap       = { workspace = true, features = ["derive", "env"] }
eyre       = { workspace = true }
hex        = { workspace = true }
humantime  = { workspace = true }
jsonrpsee  = { workspace = true, features = ["http-client", "server"] }
reqwest    = { workspace = true }
serde_json = { workspace = true }
shared     = { workspace = true }
tokio      = { workspace = true, features = ["full"] }
tower      = { workspace = true }
tracing    = { workspace = true }
url        = { workspace = true }

[dev-dependencies]
test-utils = { workspace = true }

[lints]
workspace = true
