[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = ""
homepage = ""
repository = ""
exclude = [".github/"]


[workspace]
members = ["crates/block-builder", "crates/data-ingestor"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
